Use @TempDir in tests; remove unused ValueClassRewriter overload